# MISO

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.cmake.in  files-to-check.md  mach.hpp  mach_config.sh  makefile  miso.hpp  setup.py
doc/: CMakeLists.txt  CodeDocumentation.conf.in  README  makefile
sandbox/: CMakeLists.txt  Test0.smb  Test1.smb  advection2d.cpp  airfoil_0012_tr_new_medium_FF.mesh  airfoil_chaotic.cpp  airfoil_chaotic_options.json  airfoil_flow_control.cpp  airfoil_flow_control_options.json  airfoil_optimization.cpp  airfoil_optimization_options.json  airfoil_p2.mesh  airfoil_p2_r0.mesh  airfoil_p2_r1.mesh  airfoil_steady.cpp  airfoil_steady.mesh  airfoil_steady_dg.cpp  airfoil_steady_dg_cut.cpp  airfoil_steady_dg_cut_options.json  airfoil_steady_dg_mms.cpp  airfoil_steady_dg_mms_cut.cpp  airfoil_steady_dg_mms_cut_options.json  airfoil_steady_dg_mms_options.json  airfoil_steady_dg_options.json  airfoil_steady_options.json  airfoil_tri.mesh  centgridfunc.hpp  continuous_2d_euler.cpp  continuous_2d_euler_options.json  continuous_euler.cpp  continuous_euler_options.json  control_parameters.json  cut_quad.hpp  dgd_optimization.cpp  dgd_optimization_options.json  ellipse_DG.cpp  ellipse_DG_options.json  ellipse_GD.cpp  ellipse_GD_options.json  ellipse_potential_flow.cpp  (+164 more)
sandbox/pumi/geom/: Kova.dmg  Test.dmg
sandbox/pumi/parallel/: Test0.smb  Test1.smb  abc0.smb
sandbox/pumi/serial/: Kova0.smb
sandbox/python/: acloss.py  high_fidelity_motor.csm  joule_motor_egads_openmdao.py  joule_wire_egads_openmdao.py  motor.egads  motor.egads.sup  motor.eto  wire.csm  wire.egads  wire.egads.sup  wire.eto  wire0.smb
src/common/: CMakeLists.txt  abstract_solver.cpp  abstract_solver.hpp  bfgsnewton.cpp  bfgsnewton.hpp  centgridfunc.cpp  centgridfunc.hpp  coefficient.cpp  coefficient.hpp  common.hpp  data_logging.hpp  default_options.cpp  default_options.hpp  equation_solver.cpp  equation_solver.hpp  evolver.cpp  evolver.hpp  functional_output.cpp  functional_output.hpp  galer_diff.cpp  galer_diff.hpp  inexact_newton.cpp  inexact_newton.hpp  linesearch.cpp  linesearch.hpp  linesearch_newton.hpp  mach_linearform.cpp  mach_linearform.hpp  mach_output.hpp  mach_residual.hpp  material_library.cpp  material_library.hpp  material_library.json  matrix_operators.cpp  matrix_operators.hpp  mesh_movement.cpp  mesh_movement.hpp  mfem_extensions.cpp  mfem_extensions.hpp  miso_linearform.cpp  (+27 more)
src/common/data/: CMakeLists.txt  gauss_hermite.hpp  sbp_operators.hpp
src/physics/: CMakeLists.txt  common_outputs.cpp  common_outputs.hpp  diag_mass_integ.cpp  diag_mass_integ.hpp  finite_element_dual.hpp  finite_element_state.cpp  finite_element_state.hpp  finite_element_vector.cpp  finite_element_vector.hpp  linear_optimization.cpp  linear_optimization.hpp  mach_input.cpp  mach_input.hpp  mach_integrator.cpp  mach_integrator.hpp  mach_load.cpp  mach_load.hpp  mach_nonlinearform.cpp  mach_nonlinearform.hpp  mfem_common_integ.cpp  mfem_common_integ.hpp  miso_input.cpp  miso_input.hpp  miso_integrator.cpp  miso_integrator.hpp  miso_load.hpp  miso_nonlinearform.cpp  miso_nonlinearform.hpp  optimization.cpp  optimization.hpp  pde_solver.cpp  pde_solver.hpp  physics.hpp  res_integ.cpp  res_integ.hpp  shape_opt_integ.cpp  shape_opt_integ.hpp  solver.cpp  solver.hpp
src/physics/electromagnetics/: CMakeLists.txt  cal2_ke_coefficient.cpp  cal2_ke_coefficient.hpp  cal2_kh_coefficient.cpp  current_load.cpp  (+30 more)
src/utils/: CMakeLists.txt  div_free_projector.cpp  div_free_projector.hpp  irrotational_projector.cpp  irrotational_projector.hpp  json.hpp  kdtree.hpp  l2_transfer_operator.cpp  l2_transfer_operator.hpp  mach_types.hpp  miso_types.hpp  mixed_nonlinear_operator.cpp  mixed_nonlinear_operator.hpp  utilities.hpp  utils.cpp  utils.hpp
test/: CMakeLists.txt  README.md  catch.hpp  electromag_test_data.hpp  euler_test_data.cpp  euler_test_data.hpp  inexact_newton_test2.cpp  laplace.hpp  makefile  patch.cpp  play_test.cpp  test_electromag_integ.cpp  test_euler.cpp  test_euler_fluxes.cpp  test_euler_integ.cpp  test_euler_jac.cpp  test_inexact_newton.cpp  test_inexact_newton2.cpp  test_navier_stokes_fluxes.cpp  test_navier_stokes_integ.cpp  test_reconstruction.cpp  test_sbp_fe.cpp  test_steady_vortex.cpp  test_viscous_integ.cpp
test/regression/: CMakeLists.txt  regression_test_main.cpp  test_FarField3D_exact.cpp  test_ac_loss.cpp  test_farfield3d_exact.cpp  test_inviscid_mms.cpp  test_joule_box.cpp  test_mach_inputs.cpp  test_mach_inputs.hpp  test_magnetostatic_box.cpp  test_magnetostatic_box2d.cpp  test_magnetostatic_box_new.cpp  test_magnetostatic_residual.cpp  test_meshmovement_annulus.cpp  test_meshmovement_box.cpp  test_miso_inputs.cpp  test_miso_inputs.hpp  test_navier_stokes3d_mms.cpp  test_navier_stokes_3Dmms.cpp  test_navier_stokes_mms.cpp  test_steady_thermal_cube.cpp  test_steady_vortex.cpp  test_steady_vortex_options.json  test_thermal_cube.cpp  test_thermal_cube_options.json  test_thermal_residual.cpp  test_thermal_solver.cpp  test_weak_boundary.cpp
test/unit/: CMakeLists.txt  electromag_test_data.hpp  euler_test_data.cpp  euler_test_data.hpp  laplace.hpp  sbp_tet.hpp  test_3Dflow_residual.cpp  test_3dflow_residual.cpp  test_abstract_solver.cpp  test_coefficient.cpp  test_common_outputs.cpp  test_current_load.cpp  test_data_logging.cpp  test_div_free_projector.cpp  test_electromag_integ.cpp  test_electromag_outputs.cpp  test_element_integrator.cpp  test_euler_assemble.cpp  test_euler_assemble_DG.cpp  test_euler_assemble_dg.cpp  test_euler_diff.cpp  test_euler_fluxes.cpp  test_euler_integ.cpp  test_euler_integ_DG.cpp  test_euler_sens_assemble_cut_dg.cpp  test_euler_sens_integ.cpp  test_evolver.cpp  test_flow_control_residual.cpp  test_flow_residual.cpp  test_flow_solver.cpp  test_fluid_residual.cpp  test_inexact_newton.cpp  test_irrotational_projector.cpp  test_l2_transfer_operator.cpp  test_linesearch.cpp  test_linesearch_newton.cpp  test_mach_linearform.cpp  test_mach_load.cpp  test_mach_nonlinearform.cpp  test_mach_residual.cpp  (+29 more)
(+379 files in other folders)
