target_sources(miso
   PRIVATE
      coefficient.cpp
      coefficient.hpp
      common.hpp
      default_options.cpp
      default_options.hpp
      evolver.cpp
      evolver.hpp
      functional_output.cpp
      functional_output.hpp
      inexact_newton.cpp
      inexact_newton.hpp
      miso_linearform.cpp
      miso_linearform.hpp
      miso_output.hpp
      miso_residual.hpp
      material_library.hpp
      mfem_extensions.cpp
      mfem_extensions.hpp
      orthopoly.cpp
      orthopoly.hpp
      sbp_fe.cpp
      sbp_fe.hpp
      surface.hpp
      surface_def.hpp
)

target_include_directories(miso
   PUBLIC
      "${CMAKE_CURRENT_SOURCE_DIR}"
)

add_subdirectory(data)
