target_sources(miso
   PRIVATE
      diag_mass_integ.cpp
      diag_mass_integ.hpp
      miso_input.cpp
      miso_input.hpp
      miso_integrator.cpp
      miso_integrator.hpp
      miso_load.hpp
      miso_nonlinearform.cpp
      miso_nonlinearform.hpp
      #mass_operator.cpp
      #mass_operator.hpp
      mfem_common_integ.cpp
      mfem_common_integ.hpp
      physics.hpp
      solver.cpp
      solver.hpp
)

target_include_directories(miso
   PUBLIC
      "${CMAKE_CURRENT_SOURCE_DIR}"
)

add_subdirectory(electromagnetics)
add_subdirectory(fluidflow)
add_subdirectory(joule)
add_subdirectory(meshmove)
add_subdirectory(thermal)
